--- a/html/index.html
+++ b/html/index.html
@@ -22,6 +22,7 @@
       </div>
       <h2 id = "RoomID"> Chatroom : None </h2>
       <div id = "Chat">
+        <img id="image">
         <p id = "Message0" class = "Message"> - </p>
         <p id = "Message1" class = "Message"> - </p>
         <p id = "Message2" class = "Message"> - </p>
